# refurbishedPTI

./: .gitignore  README.md  pixi.toml  pyproject.toml  requirements.txt
calibration-files/: emission_calibration.yaml  emission_init.yaml  excitation_calibration.yaml  excitation_init.yaml  itc_config.yaml
src/: gui.ipynb
src/refurbishedPTI/: __init__.py  abstract.py  configs.py  dummy_instruments.py  gui.py  instruments.py  user_interface.py
