[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "refurbishedPTI"
authors = [
    {name="Hernan E. Grecco", email="hernan.grecco@gmail.com"},
    {name="Tomas Di Napoli", email="tomas.dina98@gmail.com"},
]
description = "HoribaPTI spectrometer refurbishment instrument control package."
requires-python = ">=3.10"
keywords = [
]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["dependencies", "optional-dependencies", "version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
optional-dependencies.test = {file = "requirements.test.txt"}
optional-dependencies.generate = {file = "requirements.generate.txt"}

[project.urls]
"Homepage" = "https://github.com/tdinapoli/refurbishedPTI"
"Bug Tracker" = "https://github.com/tdinapoli/refurbishedPTI/issues"

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --doctest-modules"
pythonpath = "src"

[tool.ruff]
select = ["E", "F", "I"]
extend-include = ["*.ipynb"]
exclude = ["csrc/sources"]
